
0.10.2j Jul  15, 2011
 * make sure to remove the conflict's dependencies as well as the conflict
 * Updated regex for reading /var/log/packages compressed and uncompressed sizes
 * free regex and installed package list in slapt_pkg_action_filelist
 * updating unit tests
 * updated italian translation from Stefano Ansaloni
 * moved --version logout prior to reading config file
 * fixed commented out extra etc examples for 13.37
 * remove specific version in slack-desc
 * silence chdir return warning

0.10.2i Apr  27, 2011
 * set default example sources to 13.37
 * update working direction creation to account for N path depth
 * libassuan is now required via libgpgme
 * updated it translation from Stefano Ansaloni

0.10.2h Feb  15, 2011
 * fix parse_meta_tag() to match '+' in package name
 * hungarian translation by Peter Polonkai
 * updated ru translation from Igor Murzov
 * updated es_ES translation from Angelos

0.10.2g Sept 27, 2010
 * api cleanup, typedef'd old structs
 * updated el translation from George Vlahavas
 * updated pt_TR translation from Sérgio Surkam
 * updated fr translation from Verachten Bruno
 * updated es translation, new es_AR translation from Fernando Velo 
 * added slapt_download_data to public API
 * translation changes by Igor Murzov

0.10.2f June 21, 2010
 * updated es translation, new es_AR translation from Fernando Velo 
 * updated pt_BR translation from Sérgio Surkamp
 * updated el translation from George Vlahavas
 * updated de translation from Manfred Mueller
 * updated pt_PT translation from Miquel Santinho
 * make slapt_is_required_by properly account for alternative/conditional
   dependencies as well as be aware of what is to be installed and removed. 
 * Updated API, generalizing several types into slapt_list_t
 * added reinstall notification

0.10.2e June 02, 2010
 * updated essential packages for dist-upgrade
 * always reinstall slapt-get on dist-upgrade
 * translations cleanup
 * FAQ updates

0.10.2d Mar 07, 2010