@@ -432,42 +432,42 @@ void usage(void)
   printf(gettext("%s [option(s)] [target]\n"),PACKAGE);
   printf("\n");
   printf(gettext("Targets:\n"));
-  printf("  --update|-u    - %s\n",gettext("retrieve pkg data from MIRROR"));
-  printf("  --upgrade      - %s\n",gettext("upgrade installed pkgs"));
-  printf("  --dist-upgrade - %s\n",gettext("upgrade to newer release"));
-  printf("  --install|-i   %s\n",gettext("[pkg name(s)] - install specified pkg(s)"));
+  printf("  -u, --update   %s\n",gettext("retrieve pkg data from MIRROR"));
+  printf("  --upgrade      %s\n",gettext("upgrade installed pkgs"));
+  printf("  --dist-upgrade %s\n",gettext("upgrade to newer release"));
+  printf("  -i, --install  %s\n",gettext("[pkg name(s)] - install specified pkg(s)"));
   printf("  --install-set  %s\n",gettext("[disk set(s)] - install specified disk set(s)"));
   printf("  --remove       %s\n",gettext("[pkg name(s)] - remove specified pkg(s)"));
   printf("  --show         %s\n",gettext("[pkg name(s)] - show pkg(s) description"));
   printf("  --filelist     %s\n",gettext("[pkg name(s)] - show pkg(s) installed files"));
   printf("  --search       %s\n",gettext("[expression] - search available pkgs"));
-  printf("  --list         - %s\n",gettext("list pkgs"));
-  printf("  --available    - %s\n",gettext("list available pkgs"));
-  printf("  --installed    - %s\n",gettext("list installed pkgs"));
-  printf("  --clean        - %s\n",gettext("purge cached pkgs"));
-  printf("  --autoclean    - %s\n",gettext("only purge cache of older, unreacheable pkgs"));
+  printf("  --list         %s\n",gettext("list pkgs"));
+  printf("  --available    %s\n",gettext("list available pkgs"));
+  printf("  --installed    %s\n",gettext("list installed pkgs"));
+  printf("  --clean        %s\n",gettext("purge cached pkgs"));
+  printf("  --autoclean    %s\n",gettext("only purge cache of older, unreacheable pkgs"));
   #ifdef SLAPT_HAS_GPGME
-  printf("  --add-keys     - %s\n",gettext("retrieve GPG keys for sources"));
+  printf("  --add-keys     %s\n",gettext("retrieve GPG keys for sources"));
   #endif
-  printf("  --help|-h      - %s\n",gettext("display this help and exit"));
-  printf("  --version      - %s\n",gettext("print version and license info"));
+  printf("  -h, --help     %s\n",gettext("display this help and exit"));
+  printf("  --version      %s\n",gettext("print version and license info"));
   printf("\n");
   printf(gettext("Options:\n"));
-  printf("  --download-only|-d  - %s\n",gettext("only download pkg on install/upgrade"));
-  printf("  --simulate|-s       - %s\n",gettext("show pkgs to be installed/upgraded"));
-  printf("  --no-prompt|-y      - %s\n",gettext("do not prompt during install/upgrade"));
-  printf("  --prompt|-p         - %s\n",gettext("always prompt during install/upgrade"));
-  printf("  --reinstall         - %s\n",gettext("reinstall the pkg"));
-  printf("  --ignore-excludes   - %s\n",gettext("install/upgrade excludes"));
-  printf("  --no-md5            - %s\n",gettext("do not perform md5 check sum"));
-  printf("  --no-dep            - %s\n",gettext("skip dependency check"));
-  printf("  --ignore-dep        - %s\n",gettext("ignore dependency failures"));
-  printf("  --print-uris        - %s\n",gettext("print URIs only, do not download"));
-  printf("  --show-stats|-S     - %s\n",gettext("show download statistics"));
-  printf("  --config|-c []      - %s\n",gettext("specify alternate slapt-getrc location"));
-  printf("  --remove-obsolete   - %s\n",gettext("remove obsolete packages"));
-  printf("  --retry []          - %s\n",gettext("specify number of download retry attempts"));
-  printf("  --no-upgrade        - %s\n",gettext("install package, do not attempt to upgrade"));
+  printf("  -d, --download-only %s\n",gettext("only download pkg on install/upgrade"));
+  printf("  -s, --simulate      %s\n",gettext("show pkgs to be installed/upgraded"));
+  printf("  -y, --no-prompt     %s\n",gettext("do not prompt during install/upgrade"));
+  printf("  -p, --prompt        %s\n",gettext("always prompt during install/upgrade"));
+  printf("  --reinstall         %s\n",gettext("reinstall the pkg"));
+  printf("  --ignore-excludes   %s\n",gettext("install/upgrade excludes"));
+  printf("  --no-md5            %s\n",gettext("do not perform md5 check sum"));
+  printf("  --no-dep            %s\n",gettext("skip dependency check"));
+  printf("  --ignore-dep        %s\n",gettext("ignore dependency failures"));
+  printf("  --print-uris        %s\n",gettext("print URIs only, do not download"));
+  printf("  -S, --show-stats    %s\n",gettext("show download statistics"));
+  printf("  -c, --config []     %s\n",gettext("specify alternate slapt-getrc location"));
+  printf("  --remove-obsolete   %s\n",gettext("remove obsolete packages"));
+  printf("  --retry []          %s\n",gettext("specify number of download retry attempts"));
+  printf("  --no-upgrade        %s\n",gettext("install package, do not attempt to upgrade"));
 }
 
 void version_info(void)
